# s40sign

./: .editorconfig  .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  GIT_GUIDE.md  GIT_SETUP_COMPLETE.md  HOW_TO_USE_GIT.md  LICENSE  PROJECT_SUMMARY.md  PUSH_TO_GITHUB.md  README.md  README_EN.md  create_cert.sh  manage_cert.sh  pyproject.toml  remove_signature.sh  requirements.txt  run_app.sh  s40_sign_app.py  s40tool.bat  setup.py  sign_jar.sh  sign_tool.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build.yml  release.yml
