[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "s40-sign-tool"
version = "1.1.1"
description = "Certificate and signing tool for Nokia S40 Java applications"
readme = "README.md"
requires-python = ">=3.6"
license = {text = "MIT"}
authors = [
    {name = "S40 Sign Tool Team", email = "support@example.com"}
]
keywords = ["s40", "nokia", "java", "signing", "certificate", "jar", "jad", "mobile"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Build Tools",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Operating System :: OS Independent",
]

[project.optional-dependencies]
dev = [
    "pyinstaller>=5.0",
    "flake8>=4.0",
    "pylint>=2.0",
]

[project.scripts]
s40-sign = "sign_tool:main"

[project.gui-scripts]
s40-sign-gui = "s40_sign_app:main"

[project.urls]
Homepage = "https://github.com/yourusername/SignS40"
Documentation = "https://github.com/yourusername/SignS40/blob/master/README.md"
Repository = "https://github.com/yourusername/SignS40"
"Bug Tracker" = "https://github.com/yourusername/SignS40/issues"
Changelog = "https://github.com/yourusername/SignS40/blob/master/CHANGELOG.md"

[tool.setuptools]
py-modules = ["s40_sign_app", "sign_tool"]

[tool.flake8]
max-line-length = 127
exclude = [".git", "__pycache__", "build", "dist", ".eggs"]
ignore = ["E203", "W503"]

[tool.pylint.messages_control]
max-line-length = 127
disable = [
    "C0111",  # missing-docstring
    "C0103",  # invalid-name
]
